--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
-    "require": {
-        "guzzlehttp/guzzle": "^7.0"
-    }
+  "require": {
+    "guzzlehttp/guzzle": "^7.0",
+    "ext-pdo": "*"
+  },
+  "autoload": {
+    "classmap": [
+      "."
+    ]
+  }
 }
